# etl-workshop-1

./: .gitignore  README.md  pyproject.toml
functions/db_connection/: connection.py
notebooks/: 001_rawDataLoad.ipynb  002_candidatesEDA.ipynb  003_cleanDataLoad.ipynb
